fix: teeth overflow on safari

--- a/src/days/Day-035/index.css
+++ b/src/days/Day-035/index.css
@@ -62,6 +62,7 @@ body {
     border-radius: 100px 100px 0 0;
     border: 4px solid black;
     overflow: hidden;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .teeth-top,
